# mydemy

./: .env  .env.example  .gitignore  COURSES_ARCHITECTURE.md  DEPLOYMENT.md  DESKTOP.md  PM2_DEPLOYMENT.md  PRODUCT_ROADMAP.md  README.md  SEARCH_ARCHITECTURE.txt  SEARCH_DOCUMENTATION_INDEX.md  SEARCH_IMPLEMENTATION.md  SEARCH_QUICK_REFERENCE.md  UI_ISSUES_REPORT.md  clean-build.sh  constants.js  courses.json  deploy.sh  ecosystem.config.js  fetchCourses.js  fetchCoursesScript.js  jest.config.js  jsconfig.json  kafkaHandler.js  next.config.js  package-lock.json  package.json  playwright.config.js  remote-deploy.sh  uploadCoursesToCDN.js
__tests__/: fetchCourses.test.js  fetchCoursesScript.test.js
__tests__/hooks/: useCourses.test.js  useOfflineVideos.test.js  useTauriCourses.test.js
__tests__/utilities/: fetchCourseListings.simple.test.js  (+3 more)
components/: ErrorBoundary.js
contexts/: LearnerContext.js  ThemeContext.js
hooks/: useCourses.js  useOfflineVideos.js  useTauriCourses.js
lib/: constants.js  env.js
pages/: [courseName].js  _app.js  _document.js  index.js  offline.js
playwright-report/: index.html
public/: site.webmanifest
scripts/: build.sh  convert-ts-to-mp4.sh  reload.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
styles/: Home.module.css  globals.css
test-results/: .last-run.json
utilities/: fetchCourseListings.js  fetchCourseListingsV2.js  topicFileNameSorter.js  topicNameSorter.js
utils/: cdn.js  courseTracking.js  pinAuth.js  tagging.js  transcripts.js
(+50 files in other folders)
